# AICompany

./: .env.example  .gitignore  CLAUDE.md  README.md  回報格式.md
.claude/: launch.json  settings.json
.claude/agents/: art-lead.md  creative-lead.md  data-engineer.md  dev-lead.md  devops-sre.md  devops.md  frontend-engineer.md  product-manager.md  qa-automation.md  qa-e2e.md  qa-reviewer.md  quant-researcher.md  risk-compliance-officer.md  security-engineer.md  tech-architect.md  tech-writer.md
.claude/commands/: review.md  sync-main.md
.claude/skills/: README.md
.github/workflows/: stock-desk.yml  (+1 more)
apps/stock-desk/backend/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/stock-desk/backend/app/: __init__.py  main.py  scheduler.py
apps/stock-desk/backend/app/data/: __init__.py  cache.py  http.py  interface.py  quality.py  service.py
apps/stock-desk/backend/app/data/providers/: __init__.py  _util.py  finmind.py  fx.py  tpex.py  twse.py
apps/stock-desk/backend/tests/: test_cache.py  test_health.py  test_http.py  test_interface.py  test_providers_finmind.py  test_providers_fx.py  test_providers_tpex.py  test_providers_twse.py  test_quality.py  test_scheduler.py  test_service.py
apps/stock-desk/backend/tests/fixtures/: README.md  bot_fx_usd_twd_20240102.csv  finmind_taiwan_stock_price_2330.json  tpex_daily_trading_5483_202401.json  twse_stock_day_2330_202401.json
docs/: handoff-protocol.md  org-chart.md
scripts/: validate_agents.py
work/: .gitignore  .gitkeep  mahjong-app-v2-企劃.md  mahjong-app-v2-視覺規範.md  mahjong-app-回饋輪企劃.md  mahjong-app-架構.md
(+109 files in other folders)
